complete part 1 step 5

--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -5,11 +5,10 @@
     class="full-width"
     style="
         background-image: url({{user.header_image_url}});
-        height: 400px;
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
-        background-position: center;
+        background-position: bottom center;
     "
 ></div>
 <img
