--- a/templates/users/edit.html
+++ b/templates/users/edit.html
@@ -1,36 +1,33 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} {% block content %}
 
-{% block content %}
-
-  <div class="row justify-content-md-center">
+<div class="row justify-content-md-center">
     <div class="col-md-4">
-      <h2 class="join-message">Edit Your Profile.</h2>
-      <form method="POST" id="user_form">
-        {{ form.hidden_tag() }}
-
-        {% for field in form if field.widget.input_type != 'hidden' and field.name != 'password' %}
-          {% for error in field.errors %}
+        <h2 class="join-message">Edit Your Profile.</h2>
+        <form method="POST" id="user_form">
+            {{ form.hidden_tag() }} {% for field in form if
+            field.widget.input_type != 'hidden' and field.name != 'password' %}
+            {% for error in field.errors %}
             <span class="text-danger">{{ error }}</span>
-          {% endfor %}
-          {{ field(placeholder=field.label.text, class="form-control") }}
-        {% endfor %}
+            {% endfor %}<strong>{{ field.label }} </strong>{{
+            field(placeholder=field.label.text, class="form-control") }} {%
+            endfor %}
 
-        <p>To confirm changes, enter your password:</p>
-        {% if form.password.errors %}
-          {% for error in form.password.errors %}
-            <span class="text-danger">
-            {{ error }}
-          </span>
-          {% endfor %}
-        {% endif %}
-        {{ form.password(placeholder="Enter your password to confirm", class="form-control") }}
+            <p class="text-primary">To confirm changes, enter your password:</p>
+            {% if form.password.errors %} {% for error in form.password.errors
+            %}
+            <span class="text-danger"> {{ error }} </span>
+            {% endfor %} {% endif %} {{ form.password(class="form-control",
+            value="") }}
 
-        <div class="edit-btn-area">
-          <button class="btn btn-success">Edit this user!</button>
-          <a href="/users/{{ user_id }}" class="btn btn-outline-secondary">Cancel</a>
-        </div>
-      </form>
+            <div class="edit-btn-area">
+                <button class="btn btn-success">Edit this user!</button>
+                <a
+                    href="/users/{{ session['curr_user'] }}"
+                    class="btn btn-outline-secondary"
+                    >Cancel</a
+                >
+            </div>
+        </form>
     </div>
-  </div>
-
-{% endblock %}
+</div>
+{%endblock%}
